syntax = "proto3";

package ielts;

option go_package = "./proto/pb";

service IeltsService {
  rpc CreateBook(CreateBookRequest) returns (AbsResponse);
  rpc DeleteBook(DeleteBookRequest) returns (AbsResponse);
  rpc GetAllBook(Empty) returns (GetAllBookResponse);
  rpc CreateAnswer(CreateAnswerRequest) returns(AbsResponse);
  rpc DeleteAnswer(DeleteBookRequest) returns(AbsResponse);
  rpc GetAnswer(GetAnswerRequest) returns(GetAnswerResponse);
  rpc CreateExam(CreateExamRequest)returns(CreateExamResponse);
  rpc GetExamByUserId(GetExamByUserIdRequest) returns(GetExamByUserIdResponse);
  rpc CreateAttemptInline(CreateInlineAttemptRequest) returns(AbsResponse);
  rpc CreateAttemptOutline(CreateOutlineAttemptRequest) returns(AbsResponse);
}

message CreateBookRequest {
  string name = 1;
}
message CreateExamResponse{
  string examId = 1;
}

message GetExamByUserIdResponse{

}

message CreateExamRequest {
  int32 userId = 1;
  int32 bookId = 2;
}
message GetExamByUserIdRequest{
  int32 userId = 1;
}

message DeleteBookRequest {
  string bookId = 1;
}

message GetAllBookResponse {
  repeated Book books = 1;
}

message CreateAnswerRequest{
  string bookId = 1;
  string sectionType = 2;
  repeated string answers = 3;
}

message GetAnswerRequest{
  string book_id = 1;
}

message GetAnswerResponse{
  repeated Answer answers = 1;
}

message AbsResponse {
  int32 status = 1;
  string message = 2;
}

message Answer {
  int32 id = 1;
  int32 bookId = 2;
  string sectionType = 3;
  repeated string sectionAnswer = 4;
}

message Book {
  int32 id = 1;
  string title = 2;
}

message CreateInlineAttemptRequest{
  string examId = 1;
  repeated string userAnswer = 2;
  string sectionType = 3;
}

message CreateOutlineAttemptRequest{
  string examId = 1;
  repeated QuestionUserAnswer Qua = 2;
}

message QuestionUserAnswer{
  string question = 1;
  string userAnswer = 2;
}
message Empty {}
